src/test/ui/consts/const-eval/ub-int-array.64bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-int-array.rs:16:9
   |
LL |         MaybeUninit { uninit: () }.init,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ using uninitialized data, but this operation requires initialized memory

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-int-array.rs:31:13
   |
LL |             MaybeUninit { uninit: () }.init,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ using uninitialized data, but this operation requires initialized memory

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-int-array.rs:57:13
   |
LL |             MaybeUninit { uninit: () }.init,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ using uninitialized data, but this operation requires initialized memory

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
